@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-Author-OALDERS
 
 {{$NEXT}}
+    - Add StaticInstall and CheckIssues
 
 0.000021  2019-02-05 02:42:04Z
     - Add Code::TidyAll::Plugin::UniqueLines to develop requires
